Changement texte présentation

--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
       <h1>Je m'appelle Lucas Saillot.<br />J'ai 17ans.</h1>
       <p>
         Actuellement étudiant au Lycée Pablo Neruda en Terminale technologique
-        (STI2D), je m'oriente <br />
-        vers un Bachelor Concepteur Développeur Informatique en Alternance à
-        CESI.
+        (STI2D), <br />
+        Suite à mon acceptation à CESI Rouen pour le Bachelor Concepteur
+        Développeur Informatique en Alternance, <br />Je suis à la recherche
+        d'une entreprise capable de m’offrir la possibilité d’apprendre le
+        métier de Développeur Informatique.
       </p>
     </div>
     <!-- PROFIL -->
