--- a/index.html
+++ b/index.html
@@ -328,9 +328,11 @@
               <h1>Contact</h1>
               <p>
                 Actuellement étudiant au Lycée Pablo Neruda en Terminale
-                technologique (STI2D), je m'oriente <br />
-                vers un Bachelor Concepteur Développeur Informatique en
-                Alternance à CESI.
+                technologique (STI2D), <br />
+                Suite à mon acceptation à CESI Rouen pour le Bachelor Concepteur
+                Développeur Informatique en Alternance, <br />Je suis à la
+                recherche d'une entreprise capable de m’offrir la possibilité
+                d’apprendre le métier de Développeur Informatique.
               </p>
             </div>
             <div class="contact" id="contact">
@@ -340,9 +342,7 @@
               </div>
               <div class="mail">
                 <i class="fa-light fa-envelope"></i>
-                <a href="mailto:saillot.lucas2006@gmail.com"
-                  >saillot.lucas2006@gmail.com</a
-                >
+                <a href="mailto:lucas@lucassaillot.fr">lucas@lucassaillot.fr</a>
               </div>
             </div>
             <div class="logos">
