remplacement lien contact
ajout du linktree au bouton contact

--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
 
     <!-- BOUTONS -->
     <div class="button">
-      <button class="btn1"><a href="#contact">Contact</a></button>
+      <button class="btn1">
+        <a href="https://tr.ee/DJpmeImhKU" target="_blank">Contact</a>
+      </button>
       <button class="btn2">
         <a href="/files/CV_Lucas_Saillot.pdf" target="_blank">Mon CV</a>
       </button>
@@ -335,7 +337,7 @@
                 d’apprendre le métier de Développeur Informatique.
               </p>
             </div>
-            <div class="contact" id="contact">
+            <div class="contact">
               <div class="telephone">
                 <i class="fa-regular fa-phone"></i>
                 <a href="tel:+33761525043">07 61 52 50 43</a>
