changement lien navbar contact

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a href="/">Accueil</a>
         <a href="#competence">Mes compétences</a>
         <a href="#projets">Mes projets</a>
-        <a href="#contact">Contact</a>
+        <a href="https://tr.ee/DJpmeImhKU">Contact</a>
       </div>
       <div class="menu-mobile" onclick="toggleMenu()">
         <i class="fa-thin fa-bars-staggered"></i>
