ajout linktree et linkedin

--- a/index.html
+++ b/index.html
@@ -346,8 +346,19 @@
                 <i class="fa-light fa-envelope"></i>
                 <a href="mailto:lucas@lucassaillot.fr">lucas@lucassaillot.fr</a>
               </div>
+              <div class="linktree">
+                <i class="fa-regular fa-link-simple"></i>
+                <a href="https://linktr.ee/lucassaillot"
+                  >linktr.ee/lucassaillot</a
+                >
+              </div>
             </div>
             <div class="logos">
+              <a
+                href="https://www.linkedin.com/in/lucassaillot/"
+                target="_blank"
+                ><i class="fa-brands fa-linkedin"></i
+              ></a>
               <a href="https://github.com/lucassaillot" target="_blank"
                 ><i class="fa-brands fa-github"></i
               ></a>
