--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
               </div>
               <div class="linktree">
                 <i class="fa-regular fa-link-simple"></i>
-                <a href="https://linktr.ee/lucassaillot"
+                <a href="https://linktr.ee/lucassaillot" target="_blank"
                   >linktr.ee/lucassaillot</a
                 >
               </div>
