changement url icons

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="img/flavicon_white.png"
     />
     <link
-      href="https://cdn.jsdelivr.net/gh/eliyantosarage/font-awesome-pro@main/fontawesome-pro-6.5.2-web/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
       rel="stylesheet"
     />
     <link href="https://vjs.zencdn.net/8.10.0/video-js.css" rel="stylesheet" />
@@ -32,7 +32,7 @@
         <a href="https://tr.ee/DJpmeImhKU" target="_blank">Contact</a>
       </div>
       <div class="menu-mobile" onclick="toggleMenu()">
-        <i class="fa-thin fa-bars-staggered"></i>
+        <i class="fa-solid fa-bars"></i>      
       </div>
     </header>
     <!-- HEADER -->
@@ -339,16 +339,16 @@
             </div>
             <div class="contact">
               <div class="telephone">
-                <i class="fa-regular fa-phone"></i>
+                <i class="fa-solid fa-phone"></i>
                 <a href="tel:+33761525043">07 61 52 50 43</a>
               </div>
               <div class="mail">
-                <i class="fa-light fa-envelope"></i>
+                <i class="fa-solid fa-envelope"></i>
                 <a href="mailto:lucas@lucassaillot.fr">lucas@lucassaillot.fr</a>
               </div>
               <div class="linktree">
-                <i class="fa-regular fa-link-simple"></i>
-                <a href="https://linktr.ee/lucassaillot" target="_blank"
+                <i class="fa-solid fa-link"></i>
+                  <a href="https://linktr.ee/lucassaillot" target="_blank"
                   >linktr.ee/lucassaillot</a
                 >
               </div>
